; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_rate/onoe/extr_onoe.c_ath_rate_findrate.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_rate/onoe/extr_onoe.c_ath_rate_findrate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_softc = type { i32 }
%struct.ath_node = type { i32 }
%struct.onoe_node = type { i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ath_rate_findrate(%struct.ath_softc* %0, %struct.ath_node* %1, i32 %2, i64 %3, i32* %4, i32* %5, i32* %6) #0 {
  %8 = alloca %struct.ath_softc*, align 8
  %9 = alloca %struct.ath_node*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca %struct.onoe_node*, align 8
  store %struct.ath_softc* %0, %struct.ath_softc** %8, align 8
  store %struct.ath_node* %1, %struct.ath_node** %9, align 8
  store i32 %2, i32* %10, align 4
  store i64 %3, i64* %11, align 8
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  store i32* %6, i32** %14, align 8
  %16 = load %struct.ath_node*, %struct.ath_node** %9, align 8
  %17 = call %struct.onoe_node* @ATH_NODE_ONOE(%struct.ath_node* %16)
  store %struct.onoe_node* %17, %struct.onoe_node** %15, align 8
  %18 = load %struct.onoe_node*, %struct.onoe_node** %15, align 8
  %19 = getelementptr inbounds %struct.onoe_node, %struct.onoe_node* %18, i32 0, i32 3
  %20 = load i32, i32* %19, align 4
  %21 = load i32*, i32** %12, align 8
  store i32 %20, i32* %21, align 4
  %22 = load %struct.onoe_node*, %struct.onoe_node** %15, align 8
  %23 = getelementptr inbounds %struct.onoe_node, %struct.onoe_node* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32*, i32** %13, align 8
  store i32 %24, i32* %25, align 4
  %26 = load i32, i32* %10, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %33

28:                                               ; preds = %7
  %29 = load %struct.onoe_node*, %struct.onoe_node** %15, align 8
  %30 = getelementptr inbounds %struct.onoe_node, %struct.onoe_node* %29, i32 0, i32 2
  %31 = load i32, i32* %30, align 4
  %32 = load i32*, i32** %14, align 8
  store i32 %31, i32* %32, align 4
  br label %38

33:                                               ; preds = %7
  %34 = load %struct.onoe_node*, %struct.onoe_node** %15, align 8
  %35 = getelementptr inbounds %struct.onoe_node, %struct.onoe_node* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = load i32*, i32** %14, align 8
  store i32 %36, i32* %37, align 4
  br label %38

38:                                               ; preds = %33, %28
  ret void
}

declare dso_local %struct.onoe_node* @ATH_NODE_ONOE(%struct.ath_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
